--- a/IELTS/语料库听写/听写记录2.md
+++ b/IELTS/语料库听写/听写记录2.md
@@ -62,3 +62,22 @@ hotel crime, hunt for, house insurence, house key, housing agency, human being, 
 #### test paper 7
 living cost, living expenses, loan, local walking club, local history, local industry, local pet shop, local product, local resident, local school, local shop, local student, local tribe, lookout point, lock all windows, long term learn, lost of soil, lose temper, loud speaker, love story, low nutrition, low frequency noise, low income, magazines and journals, magical animals, machine and robot, martial arts, maid servant, mails, mailing list, major in nursing, main course, main entrance, main hall, main kitchen, main library, make an oppiontment, make plan , map of cave, manage time, man make dam, manual facility, market research, cycle, economy, marketing management, research, techniques, simenar, strategy, math media, mind map, master's degree, master card, meat and cheese, mathematic fomular, mature student, media study, media center, media room, medical science, medical center, medical history, book list, membership consultant, membership of club, mental ability, mental education, microwave oven, mid autumn festival, midmornning snack, mid range, mid semester, migration pattern, -, miles, military museum, mill thr grain on the ground, millons of, mountain, miniral water, minimum qualification, mining industry, mobile phone, modern languages, modern managed hotel, modern sport facilities, money diary, money lender, money management, money order, m of education , mosquito net, mother in law, movie poster, movement of muscle, music equipment, music instrument, notice board, name badge, native animal, negative effect, natural medicine, museum, fiber, new techonology, night, night shift, no allergy, no charge, no nut, non medicine item, non stop flight, not checked idenditity, not for circulation, number of exposure, number of occupant, nursing care, nursing deploma, occupational factors, nursery, nursery school, obligatery course, self-sufficient, off campus, office assistant, over fill, -, olive oil, -
 
+#### test paper 8
+on campus, on foot, on sale, on small scale, one way ticket, one way, online shopping, open admission, open shelves, open book exam, optic examnation, optional course, optional expense, oral defence, orange juice, ordinary farmers, organic farming, organic fiber, organic food, organic material, or- studies, original reason, out circulation, out of temper, out of loan, outside activity, overall aim of the health club, overall trend, overdue and pay a fine, overhead projector, overhead view, overseas student, hitch hike, packages, package tour, packing list, Pacific Ocean, p pool, pages, pal group relationship, palaces, palm tree, paper jam, parents meeting end, parental teaching, parttime job, part-time, party wears, passport photo, pay for loss, payment method, per day, per month, per person, per week, per year, permit required, personal alarm, personal statement, personal trainer, PHD, solosiphers, phone bill, photocopies of notes, photocopies of articles, photocopy of article, photocopy office, physical activity, physical education, surrandings, therapy, pie chart, pine tree, pink slip, placement test, planet science, society, planning meeting, planting garden, plastic bags, plastic collection, plus, pocket money, point of view, polish cars, pole erea, pop test, population explosion, growth, -, positive effect, possible -, postal survey, power company, practical material, skills, procations, precious stone, presentation skills, president-, previous data, previous insurence -, result, studies, price list, principle, printed card, catalog, private bathroom, private property, private school, private trip, prize giving, professional learning, project work, project background, project outline, profits, psycological patients, psycological course, public transport, public winners, public examination, public facilities, public health, public interest, public school, public service, public skills, quality of teaching, quality of education, quality of personal, quary tiles, property insurance, question handling, queen suite, queen sized bed, queen's park, RA, railway rail, railway station, railway tracks, railway worker, random selection
+
+#### test paper 9
+range of english level, rapid population growth, raw materials, rare lines, rare species, rare fish, reach one's destination, readers, reading habits, reading hits, reading list, reading session, recall library books, recall system, receive prizes, reception area, reception certer, reception desk, recreation therapy, recruit method, recycling material, red flag, red kag-, red meat, reference books, reference skills, reference stacks, refresher course, registered mail, regular meeting, regulation, reinforced by wood and steel, relate to, remain steady, replacement of jobs, replacement policy, required course, research approach, research assistant, research findings, research methods, research opportunities, results, source, resident student, residential college, resistance from parents, resource management, resource protection, resource sharing, resouces room, respect local environment, result form , result in, review of literature, review pro-, rice c-, riverside restaurant, road-, robots, rock salt, roman story, Rose Garden, roll house, round trip ticket, round trip, route map, road map, royal commission, robot blanket, robot tree, rules and regulations, run risks, running facilities, running tunnel, rural area, role of staff, rush hour, safety check, safety helmet, sales team, safety office, regulation, silent island, sand glass clock, satellite TV station, schools of arts and sciences, school uniform, science fiction, science museum, scientific approach, scientific research, scores, sea otter, sea urchen, sea watch, sea food restaurant, seat belt, seating capacity, second floor, second hand text books, secondary school, second-year student, -, selection method, self-access lab, self-defence, self-service restaurant, senior advisor, senior manager, senior staff, sense of achivement, sense of success, sensible exercise, sentences, service manager, set money aside, shared bathroom, shared social area, sheer the sheep, sheep and cattle, sheep sheering, shift work, shop assistant, shop manager, shopping center, shopping list, shopping mall, shortage of money, sick note, side effects, safari zoo, safari park, similar experiments, single item, size of population, size of sample, silver cloth
+
+#### test paper 10
+skydom, sleeping pills, sleeping sickness, slide presentation, small scale, small scar on his chin, smoke alarms, social activity, social isolation, socail issues, social matter effects, social matters, social problems, social status, social workers, soft drink, soft toys, sound effect, solar system, solar power, soar throat, spare time, spare parts, spare socks, space shuttle, special audio equipment, special chemicals, special mail, special offers, special party hats, special rule, specialist engine design, specialized course, specialised mesuem, specialised sports facilities, species in rare animal area, species of crocodiles, spending -, spiders, spiral notebook, sports article, sport suit, sport center,sports hall, sports shoes, spinose-, stack system, stacks, standard of education, standard suite, stars, starter project, starting point, states, stake set, steam engine ship, steel and wood, st-, steer water, stock market, stomach and heart, stomach muscles training, stones,storage space, store house and temples, stories, story conference, stress levels, stress management, stressful, streching, streching movement, strict control, strong scent, strong wind, student account, student banking, student debt, student hostel, student information desk, student representative, student service, student support service, student union, studio apartment, study-, study circle, study club, study techniques, styles, stuffed nose, stuffed toys, stuffed per, -, subject access, submit the document, sufficient detials, supportive-, -, sun's position, suntan -, sunscream, summary report, survey conducted, survey of reading ,survival course, swimming costume, in water fall, pool, suit, TA, tablets, take notes, take blood pressure, take one's temperature, take regular exercise, take risks, tank fee stand, techniqual vocabulary, techniqual institution, teaching club, teaching hours, teaching method, teaching staff, teaching - teachers and faculty, tape recorder, telephone survey, television drama, temple wall, temples, tennis club, terrist house, t heat, tersury education, text structure, textbook allowance, the marketing department, the disabled, the old, the poor, the milky way
+
+#### test paper 11
+theme garden, theme of project, theme park, theoretical background, theoretical framework, tiger shark, theory chapters, theory of applicaiton, therapy method, tilled land, third floor, third year student, thinking pattern, way of thinking, time table, time measurement, time priority, time management, title of essay, to some degree, to some extent, toliet facilities, too much work, tomatoes, towns, top shelf, top ten, touching rocks, tour guide, tourism organization, tourist -, town hall, toy factory, traffic flow, traffic jam, traffic lights, traffic rules, traffic safety, transportation card, travel agency, travel package, traveller's cheque, treatment method, Trinity College, - disease, tuition fee, tutorial system, twin room, TV series, TV chat show, under pressure, under go processing, under ground car park, under ground railway, unhealhy diet, union bank, unite of measurement, university divers, university facilities, university guide, university of -, university resource, unsocial hours, upward trend, urban area, vaccume cleaner, vaccume the stairs, vary according to the type, shape, vary one's diet, vegetable burger, video project, video recording, video signal, video tape editor, visual aids, VIP class, vi- learning, VISA, violent crimes, volcanic dusts, warm bus, volumn chart, voting system, waiting list, walking boots, walking club, wait training , washable shoes, wasshing machine, wedding photoes, waste handling waste disposal, X ray, weaving blanket, water fee, water heater, water park, water resources, water skiing, weekly return, welcome package, welcome party, wellfare departmetn, western europe, wheel chair, white meat, whole sale, wide reading, wide writing, widen one's horizon, widen one's view, wind power, wind tunnels, window dressing, wind design, withdral cash, women author, wood should be cut and seasoned, work objective, work place, work systematicly, world expose, wretched boat, wild animal, youth hostel, your own embassy, yellow fever
+
+#### test paper 12
+abrivation, access, accessible, accident, affair, announcement, a-, accomondation, recommendation, a-, according, breading, surrounding, cooking, accounts, accountancy, accounting, addition, additional, address, dress, dressing, assessment, admission, commission, depression, affect, effect, effective, effectively, appeal, annual, arrival, applicants, application, applied, applience, approach, appointment, approvle, approximate, assistance, assistant, assosiate, assosiation, attachment, attack, attempt, attitude, attend, attendence, attention, attentive, business, balloon, cartoon, spoon, billion, ball room, bathroom, playroom, roommates, barren, barrier, better, baphe, beginner, beginning, planner, planning, blood, bloom, boots, book, booking, bookcloth, canible, connect, cassette, cattle, classical, classification, classmates, comment, commercial, communication, community, common, cotton, coffee, cottage, craming, raining, wedding, band, current, currency, cooperate, cross roads, des-, des-, different, difference, dinner, d-, little, pizza, discuss, discussion, speech, suggestion, door, dollar, floor, poor, efficient, essensial, excurate, essay, embassy, issue, coreculem, express, congress, pressed, pressure, fee, feedback, ferry, fossil, food, foot, football, footprints, goods, gallen, grammer, handbook, textbook, notebook, news letters, hippop, hoover, horror, hall, immune, irrigation, irritation, useless, impossible, incorrect, in-, interviewee, lesson, degree, likely heard, fire wood, matter, mammal, math, massage, midday, million, -, lookout, occasion, occupant, occupation, occupational, offer, office, officer, passage, passport, password, pattern, paddle, panny, personnel, pottery, process, procession, profession, professor, quesionnar, possibility, opportunities, robber, otter, rubbish, russian, school, -, -, screen, sea food, settle ments, shuttle, shopping, swimming, skiing, setting, steel, steering, stress, stressful, stiff, staff, stuff, cliff, success, sucessful, session, -, summary, summer, summit, suplimentary, supply, support, supportive, tennis, tunnel, tooth ache, traffic, terrist, -, vaccine, vaccume, waitress, willow, weed, wood, woods, zoo
+
+
+
+
+
