--- a/IELTS/语料库听写/错误记录.md
+++ b/IELTS/语料库听写/错误记录.md
@@ -786,16 +786,16 @@
 |**chapter 5.8**|
 |on sale|
 |on small scale|
-|open shelves|
+|open shelves|optic examination|
 |optional course|
 |ordinary farmers|
 |organic fiber 有机纤维|
-|oriental studies 东方研究|
+|oriental studies 东方研究|oriental studies|
 |out circulation 已借走|
 |overall aim of the health club|
 |overdue and pay a fine 过期罚款|
 |hitchhike 搭便车|
-|paddling pool 嬉水池|
+|paddling pool 嬉水池|padding pool|
 |pal group relationship 伙伴关系|
 |palaces|
 |palm tree 棕榈树|
@@ -803,27 +803,27 @@
 |parental teaching|
 |party wears|
 |personal trainer|
-|philosopher|
+|philosopher 哲学家|philosophers|
 |photocopies of notes|
 |photocopies of articles|
 |photocopy of article|
-|photocopy office|
+|photocopy office|phisical surroundings|
 |physical therapy|
 |pink slip 解雇通知书|
 |plastic collection|
 |pocket money|
 |polish cars|
-|poor area|
+|poor area|poor area|
 |pop test 抽考|
 |population growth|
-|population of crocodiles|
-|postal survey 邮寄调查|
-|precautions 预防|
-|presentation skills 介绍|
-|President's suite|
-|public awareness|
-|quality of personnel 人员素质|
-|quarry tiles 采石瓦|
+|population of crocodiles|population of crocodiles|
+|postal survey 邮寄调查|possible causes of tress|
+|precautions 预防|precautions|
+|presentation skills 介绍|principal 校长|
+|President's suite|psychological patients|
+|public awareness|public awareness|
+|quality of personnel 人员素质|quality of personnel|
+|quarry tiles 采石瓦|quarry tiles|
 |question handling 问题处理|
 |Queen's suite|
 |railway rail|
@@ -831,62 +831,62 @@
 |raw material 原材料|
 |reading session 阅读课|
 |recall library books|
-|receive prize|
+|receive prize|receive prizes|
 |recreation therapy 娱乐疗法|
 |recruiting method 招聘方法|
-|red kangaroo|
+|red kangaroo|red kangaroo 袋鼠|
 |refresher course 进修|
 |registered mail 挂号信|
 |reinforced by wood and steel|
-|research opportunities|
+|research opportunities|research opportunities|
 |resistance from parents 来自家长的阻力|
 |respect the local environment|
 |result from|
 |review of literature 复习文献|
-|review promptly 及时复习|
-|rice cultivation 水稻养殖|
+|review promptly 及时复习|review promptly|
+|rice cultivation 水稻养殖|rice cultivation|
 |Riverside Restaurant|
-|Rose Lane|
+|Rose Lane|Rose Lane|
 |rock salt|
 |romance story|
 |Rose Garden|
-|row house|
+|row house|row house|
 |route map|
 |royal commission 皇家委员会|
-|rubber blanket 橡胶|
-|rubber tree|
+|rubber blanket 橡胶|rubber blanket|
+|rubber tree|rubber tree|
 |rules and regulations|
 |run risks 冒险|
 |running tunnel 行车隧道|
-|role of staff|
+|role of staff|safety helmet|
 |Silent Island|
 |sandglass clock 沙漏|
 |School of Arts and Sciences|
 |scientific approach|
 |scores|
-|sea otter 水獭|
-|sea urchin 海胆|
+|sea otter 水獭|sea otter|
+|sea urchin 海胆|sea urchin|
 |seat belt|
 |seating capacity|
-|sedentary lifestyle 久坐的生活方式|
-|sensible exercise 合适的运动|
-|shear the sheep 剪羊毛|
+|sedentary lifestyle 久坐的生活方式|sedentary lifestyle|
+|sensible exercise 合适的运动|sense of achievement|
+|shear the sheep 剪羊毛|shear the sheep|
 |sheep and cattle|
-|sheep shearing|
+|sheep shearing|sheep shearing|
 |shop assistant|
 |sick note|
 |side effects 副作用|
 |safari zoo|
 |safari park|
-|similar experiments|
+|similar experiments|similar experiments|
 |single item|
 |**chapter 5.10**|
-|sky dome 苍穹|
+|sky dome 苍穹|sky dome|
 |slide presentation 幻灯片演讲|
 |small scale|
 |small scar on his chin|
 |social isolation|
-|sore throat 咽喉痛|
+|sore throat 咽喉痛|sore throat|
 |special audio equipment|
 |special offers 特别优惠|
 |specialist engine design 专业发动机设计|
@@ -895,62 +895,62 @@
 |specialized sports facilities|
 |species of crocodiles|
 |spiral notebook 活页本|
-|spinose plants 有刺的植物|
-|standard suite 标准间|
-|steak set|
+|spinose plants 有刺的植物|spinose plants|
+|standard suite 标准间|standard suite|
+|steak set 一套牛排刀叉|steak set|
 |steel and wood|
-|stiff neck|
-|still water 死水|
+|stiff neck|stiff neck|
+|still water 死水|still water|
 |stones|
 |strong scent 很重的味道|
 |student hostel 学生旅店|
-|student representative|
-|study technique|
+|student representative|student representative|
+|study technique|study aids|
 |stuffed nose 鼻塞|
 |stuffed toys 毛绒玩具|
-|stuff of purse 钱包的材料|
-|subject access guide 主题索引|
+|stuff of purse 钱包的材料|stuff of purse|
+|subject access guide 主题索引|subject access guide|
 |sufficient details|
-|supportive atmosphere|
-|suntan block 防晒|
+|supportive atmosphere|supportive atmosphere|
+|suntan block 防晒|suntan block|
 |sun cream 防晒霜|
 |survival courses|
-|swimming costume 泳衣|
-|take one's temperature|
-|technical vocabulary|
-|teaching syllabus 教学大纲|
-|teachers and faculty|
+|swimming costume 泳衣|taxi stand|
+|take one's temperature|take one's temperature|
+|technical vocabulary|technical vocabulary|
+|teaching syllabus 教学大纲|teaching syllabus|
+|teachers and faculty|technical institution|
 |tape recorder|
-|terraced house 联排屋|
-|terrestrial heat 地热|
-|tertiary education 高等教育|
+|terraced house 联排屋|terraced house|
+|terrestrial heat 地热|terrestrial heat|
+|tertiary education 高等教育|teritary education|
 |the poor|
 |the Milky Way 银河|
 |**chapter 5.11**|
 |theoretical framework 理论架构|
 |tiger shark 虎鲨|
-|theory chapters|
+|theory chapters|theory chapters|
 |theory of application|
 |therapy method|
 |tilled land 耕地|
 |thinking pattern|
 |to some extend|
-|toilet facility|
-|tourist brochures|
+|toilet facility|tourism organization|
+|tourist brochures|tourist brochures|
 |traveller's check 旅行支票|
 |Trinity College 三一学院|
-|tropical diseases 热带病|
+|tropical diseases 热带病|tropical disease|
 |tuition fee|
 |tutorial system 小组讨论系统|
 |urban area 市区|
-|vacuum cleaner 吸尘器|
-|vacuum the stairs|
-|visual aids|
+|vacuum cleaner 吸尘器|vacuum cleaner|
+|vacuum the stairs|vacuum the stairs|
+|visual aids|virtual learning|
 |violent crime|
-|volcanic dust 火山灰|
+|volcanic dust 火山灰|volcanic dust|
 |volume chart 体积图|
-|weight training|
-|wedding photos|
+|weight training|weight training|
+|wedding photos|welfare department|
 |waste handling 垃圾处理|
 |waste disposal|
 |weaving blanket 编织|
@@ -959,11 +959,69 @@
 |wind power|
 |wind tunnels 风洞|
 |window dressing 窗户装饰|
-|wing design 机翼设计|
-|woman author|
+|wing design 机翼设计|wing design|
+|woman author|withdraw cash|
 |wood should be cut and seasoned 风干|
-|work objective 工作目标|
+|work objective 工作目标|work systematically|
 |World Expo 世博会|
-|wretched boat 废弃的船|
+|wretched boat 废弃的船|wretched boat|
 |youth hostel|
 |your own embassy 本国大使馆|
+|**chapter 5.12**|
+||abbrivation|
+||assume|
+||recommendation|
+||annex|
+||breeding|
+||assessment|
+||affect|
+||appliance|
+||appointment|
+||approval|
+||associate|
+||association|
+||attendance|
+||buffet|
+||booklet|
+||cannibal|
+||cramming|
+||running|
+||banned|
+||dessert|
+||dissertation|
+||dizzy|
+||exaggerate|
+||curriculum|
+||fossil|
+||gallon|
+||hippo|
+||innovation|
+||likelihood|
+||narrator|
+||penny|
+||questionnaire|
+||concession|
+||supplementary|
+||terraced|
+||terrestrial|
+||vacuum|
+||weed|
+||
+||
+||
+||
+||
+||
+||
+||
+||
+||
+||
+||
+||
+||
+||
+||
+||
+||
+||
