--- a/IELTS/语料库听写/错误记录.md
+++ b/IELTS/语料库听写/错误记录.md
@@ -196,7 +196,7 @@
 |keeper|
 |kelp 海藻|kit 工具箱|
 |kiosk 小卖部|kiosk|
-|knowledge|knowkedge 知识|
+|knowledge|knowledge 知识|
 |koala 考拉|koala|
 |laser|lawyer 律师
 |lava 火山岩|lava|
