--- a/IELTS/语料库听写/错误记录.md
+++ b/IELTS/语料库听写/错误记录.md
@@ -247,7 +247,7 @@
 |perfume 香水|
 |permit|
 |petroleum 石油|petroleum|
-|philosopher 哲学家|pyilosopher|
+|philosopher 哲学家|philosopher|
 |physician 内科医生|
 |physics|
 |pianist 钢琴家|
@@ -258,7 +258,7 @@
 |port|
 |particulars 细节|
 |**chapter 3.7**|
-|pottery 陶器|porrtry|
+|pottery 陶器|pottery|
 |precaution 预防|precaution|
 |precision 精确|precision|
 |preposition 介词|prepositon|
