--- a/IELTS/语料库听写/错误记录.md
+++ b/IELTS/语料库听写/错误记录.md
@@ -417,7 +417,7 @@
 |convenient|cooperative 合作的|
 |corrupt 腐败的|
 |crucial 关键的|
-|curly 卷发的|cruly|
+|curly 卷发的|curly|
 |daily|
 |dairy 牛奶的|dairy diary|
 |dangerous|
@@ -465,7 +465,7 @@
 |political 政治的|political|
 |pop 流行的|pop|
 |**chapter 4.3**|
-|printed|protential 潜在的|
+|printed|potential 潜在的|
 |psychiatric 精神病的|psychiatric|
 |psychological 心理学的|
 |Queen's|precious 珍贵的|
@@ -594,7 +594,7 @@
 |charitable organization|charitable organization|
 |charity hospital|chequebook|
 |concentrate on|cheque card|
-|circus performance 马戏团表演|concertrate on|
+|circus performance 马戏团表演|concentrate on|
 |commuters|city's expansion|
 |class representative|
 |conquerors|
@@ -639,7 +639,7 @@
 |domestic violence|
 |double grill 双烤架|
 |Drama Festival|
-|dress rehearsal 彩排|dress rehearsayl|
+|dress rehearsal 彩排|dress rehearsal|
 |disputes 争议|disputes|
 |EL Nino 厄尔尼诺现象|driver's license|
 |economic growth|
@@ -723,7 +723,7 @@
 |industrial material|
 |injection of vaccine 注射疫苗|institutes|
 |insects haunting 虫灾|insects haunting|
-|intensive course 强化课程|intersive course|
+|intensive course 强化课程|intensive course|
 |interlibrary service 图书馆际服务|
 |investigators 调查者|
 |irrigable land 可灌溉土地|
@@ -807,7 +807,7 @@
 |photocopies of notes|
 |photocopies of articles|
 |photocopy of article|
-|photocopy office|phisical surroundings|
+|photocopy office|physical surroundings|
 |physical therapy|
 |pink slip 解雇通知书|
 |plastic collection|
@@ -817,7 +817,7 @@
 |pop test 抽考|
 |population growth|
 |population of crocodiles|population of crocodiles|
-|postal survey 邮寄调查|possible causes of tress|
+|postal survey 邮寄调查|possible causes of stress|
 |precautions 预防|precautions|
 |presentation skills 介绍|principal 校长|
 |President's suite|psychological patients|
@@ -923,7 +923,7 @@
 |tape recorder|
 |terraced house 联排屋|terraced house|
 |terrestrial heat 地热|terrestrial heat|
-|tertiary education 高等教育|teritary education|
+|tertiary education 高等教育|tertiary education|
 |the poor|
 |the Milky Way 银河|
 |**chapter 5.11**|
