--- a/IELTS/语料库听写/标准答案.md
+++ b/IELTS/语料库听写/标准答案.md
@@ -51,28 +51,28 @@ bulletin board, breathtaking , breed fish, British Council, British Library, Bri
 contact lenses , cooperating research elements, coping with stress, corperation loan, cost effective, cost of living, costume party, cough mixture, country music, course fee, course and materials, course director, cover the cost, craft goods, credit card, creeks, crime awareness, crime rate, cross passage, cultrual diffenences, cultural shock, curve chart, currency form ,current account, cycling route, customer service, cut and polished, damages, dark clothes, dark trousers, dateline, data analysis, data assessment, date of birth, date of expiry, date slip, day pupil, day school, day shift, debts, decades, decayed teeth, decoration balloons, deliver a speach, delivery desk, department building, department store, departmental address, desire to learn, desk lamp, details, detective film, digital camera, digital system, different levels, dining hall, dining room, diseases, distant deadline, distance learning, divorce rate, distinguishing feature, distribution of population, downward trend, do training courses, Doctor's degree, domestic factors, domestic student, domestic violence, door key, door-to-door service, drugs, double look, double room, double grill, Drama Theater, Drama Festival, drama teacher, draw a conclusion, disabled access, dropout rate, dress code, dress rehearsal, disputes, drinking machine, drinks and snacks, drink less coffee, driver's licence, driving licence, directors, drop-off site, drop-off, EL Nino, Eagle Road, eastern beach, eat harmful insects, economic growth, economic history, economy class, education exhibition, education officer, education standard, education system, electronic director, electric fan, electricity bill, electricity fee, electronic dictionary, email atachment, email account, email address, emergency contact person, emergency telephone number, dial
 
 #### test paper 4
-emotion and mood, end of term, endangered fishes, energy industory, engineers, engineering room, engrave, enrollment fee, entrance fee, environment agency, environmental damage, issues, science, studies, environmentally friendly, evening news, appointment, exercise one's muscles, exhibition of instruments, experimental for constructions, facilities, expected duration, express train, way, extension number, extensive writing, exchange draft, extra charge, workload, ethical film, eye doctor, eye contacts, essay plan, - species, face to face interview, failure rate, family medical history, familure with, family abuse, ticket, name, relationship, fancy dress, ball, dress party, falcons, farewell party, farming products, fear of unemployment, feel one's pulse, female corpse study, field method, system, trip, work, film festival, studio, financial advise, financial a-, budget, department, e-, goal, market, organization, policy, problems, shortage, source, fine arts, fine texture, fire alarm, blanket, d-, management, first floor, name, aid kit, year student, fish cakes, fish tank, fishing boat, industory, fitness center, club, level, training, fixed expenses, flexible working time, flight number, flowers taste, - craft, speed, food processing, food and oil, food chin, focus on, football club, match, for sale, forestry industory, formal clothes, fortnight, four nights, fours year's student
+emotion and mood, end of term, endangered species, energy industory, engineers, engineering room, engrave, enrollment fee, entrance fee, environment agency, environmental damage, environmental issues, environmental science, environmental studies, environmentally-friendly, Evening News, evening appointment, exercise one's muscles, exhibition of instruments, experimental for construction, experimental facilities, expected duration, express train, express way, extension number, extensive writing, exchange drafts, extra charge, extra workload, ethical film, eye doctor, eye contacts, essay plan, extinct species, face-to-face interview, failure rate, family medical history, familiar with, family abuse, family ticket, family name, family relationship, fancy dress, fancy ball, fancy dress party, falcons, farewell party, farming products, fear of unemployment, feel one's pulse, female corpse study, field method, field system, field trip, field work, film festival, film studio, financial advise, financial arrairs, financial budget, financial department, financial executive, financial goal, financial market, financial organization, financial policy, financial problems, financial shortage, financial source, fine arts, fine texture, fire alarm, fire blanket, fire drill, fire management, first floor, first name, first-aid kit, first-year student, fish cakes, fish tank, fishing boat, fishing industory, fitness center, fitness club, fitness level, fitness training, fixed expenses, flexible working time, flight number, flowers' taste, flying craft, flying speed, food processing, food and oil, food chain, focus on, football club, football match, for sale, forestry industory, formal clothes, four nights, fortnight, foutth-year student
 
 #### test paper 5
- free for heating , free of charge, free transportation , fruit juice, fruit trees, functions and places, full time, full name, fur trade, further education, garden hall, garden tool, generation of electricity, gas station, general election, general english, practise, health, ideas, method, science, geography trip, geographic location, geographical value, give sth a sack, given name, give a prescription, give up, give a speech, give confirmation, get feetbacks, guide book, guided tour, go to hospital, global listenling, warming, gold medal, street, golf club, good eyesight, good shoes, good stearing, goodbye party, government policy, government funded, grasp key words, graduate school, graduation announcement, grain pattern of -, grain pattern, great favourite, ground floor, green waste, greyhound bus, group discussion, gym membership, hens, high wind, half human, half term, hard-hoofed animal, hall of the residence, hand pump, hand broken, have access to, harmful insects, to human, have strong heart and lung, have an operation, have high rank in geography, have strong financial muscles, help desk, head master, head office, health care, health check, club, heart attack , heart beats, heart disease, - indicator, horse hair, horse riding, herb tea, herd of cattles, host family, high rank, highly trained staff, high education, high- building, high quality camera, honey moon suite, historical museum, history of school, historical map, horror film, hot-dog, hot meal, hot house effect
+ free for heating , free of charge, free transportation , fruit juice, fruit trees, functions and places, full-time, full name, fur trade, further education, Garden Hall, garden tools, generation of electricity, gas station, general election, general English, practise, general health, general ideas, general method, general science, geography trip, geographic location, geographical value, give sb a sack, given name, give a prescription, give up, give a speech, give confirmation, get feetback, guidebook, guided tour, go to hospital, global listenling, global warming, gold medal, Gold Street, Golf Club, good eyesight, good shoes, good steering, goodbye party, government policy, government-funded, grasp keywords, graduate school, graduation announcements, grain pattern of timber, grain pattern, great favourites, ground floor, green waste, greyhound bus, group discussion, gym membership, hens, high wind, half human, half term, hard-hoofed animals, hall of residence, hand pump, hands broken, have access to, harmful insects, harmful to humans, have strong hearts and lungs, have an operation, have high rank in geography, have strong financial muscles, help desk, headmaster, head office, healthcare, health check, health club, heart attack, heartbeats, heart disease, heat indicator, horse hair, horse riding, herb tea, herd of cattles, host family, high rank, highly-trained staff, higher education, high-rising buildings, high-quality camera, honeymoon suite, historical museum, history of school, historical maps, horror film, hotdog, hot meal, hothouse effect
 
 #### test paper 6
-hotel crime, hunt for, house insurence, house key, housing agency, human being, human consumption, human race, human resource, ice cirling, ice pack, ice skating, identities, identity card, illegal profit, invisible view, immune system, in advance, in chemistry lab, in circles, in circulation , Indian Ocean, incoming -, independence day, industrial material, information board, information video, information desk, information page, information sector, inland region, initial migration, injection of vaccine, institude, institution, in-, instructors, instruction of handbook, instance coffee, inter personal , ensurance company, -, intensive course, intensive study, interlibrary service, intermediate course, internal clock, international club, international evening, international student card, international student, internet access, internet cafe, internet system, investigators, irrigable lands, isolated spots, job interviews, jaw, joint membership, keepers, jump the queue, jump the line, -, -, kelp forest, key approach, k-, keywords, kick sb out of work, King's sized bed, king suite, knife, kitchen table, utensil, lamp, listening tape-, lab equipment, lack confidence, lack of confidence, landmark, large slide, large scale housing, lecture hall, laser printing, last but not least, last name, lawyers, layout of resume, learning strategy, learning style, leisure wear, leisure activity, level of moturity, lemon tree, letter of reccommodation, library card, library resources, life science, life cycle, life expectancy, life ensurance, live, link to, literary film, list of headings, list of objectives
+hotel crime, hunt for, house insurence, house key, housing agency, human beings, human consumption, human race, human resources, ice curling, ice pack, ice skating, identities, identity card, illegal profits, in visible view, immune system, in advance, in chemistry lab, in circles, in circulation , Indian Ocean, incoming calls, Independence Day, industrial material, information board, information video, information desk, information page, information sector, inland region, initial migration, injection of vaccine, institutes, institutions, insects haunting, instructors, instruction of handbook, instance coffee, interpersonal skills, insurance companies, insurance company, intensive course, intensive study, interlibrary service, intermediate course, internal clock, international club, international evening, international student card, international student, Internet access, Internet cafe, Internet system, investigators, irrigable land, isolated spot, job interview, jaws, joint membership, keepers, jump the queue, jump the line, killer whale, Kungfu film, kelp forest, key approach, key to reception, keywords, kick sb out of work, King-sized bed, king's suite, knives, kitchen table, kitchen utensils, lamps, listening tapescript, lab equipment, lack confidence, lack of confidence, landmark, large slide, large-scale housing, lecture hall, laser printing, last but not least, last name, lawyers, layout of resume, learning strategy, learning styles, leisure wear, leisure activities, level of moturity, lemon tree, letter of recommendation, library card, library resource, life science, life cycle, life expectancy, life insurance, lights, link to, literary film, list of headings, list of objectives
 
 #### test paper 7
-living cost, living expenses, loan, local walking club, local history, local industry, local pet shop, local product, local resident, local school, local shop, local student, local tribe, lookout point, lock all windows, long term learn, lost of soil, lose temper, loud speaker, love story, low nutrition, low frequency noise, low income, magazines and journals, magical animals, machine and robot, martial arts, maid servant, mails, mailing list, major in nursing, main course, main entrance, main hall, main kitchen, main library, make an oppiontment, make plan , map of cave, manage time, man make dam, manual facility, market research, cycle, economy, marketing management, research, techniques, simenar, strategy, math media, mind map, master's degree, master card, meat and cheese, mathematic fomular, mature student, media study, media center, media room, medical science, medical center, medical history, book list, membership consultant, membership of club, mental ability, mental education, microwave oven, mid autumn festival, midmornning snack, mid range, mid semester, migration pattern, -, miles, military museum, mill thr grain on the ground, millons of, mountain, miniral water, minimum qualification, mining industry, mobile phone, modern languages, modern managed hotel, modern sport facilities, money diary, money lender, money management, money order, m of education , mosquito net, mother in law, movie poster, movement of muscle, music equipment, music instrument, notice board, name badge, native animal, negative effect, natural medicine, museum, fiber, new techonology, night, night shift, no allergy, no charge, no nut, non medicine item, non stop flight, not checked idenditity, not for circulation, number of exposure, number of occupant, nursing care, nursing deploma, occupational factors, nursery, nursery school, obligatery course, self-sufficient, off campus, office assistant, over fill, -, olive oil, -
+living cost, living expenses, loans, local walking club, local history, local industry, local pet shop, local product, local resident, local school, local shop, local student, local tribes, lookout points, lock all windows, long-term learn, loss of soil, lose temper, loudspeaker, love story, low nutrition, low-frequency noise, low income, magazines and journals, magical animals, machines and robots, martial arts, maid servant, mails, mailing list, major in nursing, main course, main entrance, main hall, main kitchen, main library, make an oppiontment, make plans, map of cave, manage time better, manmade dam, manual facilities, market research, market cycle, market economy, marketing management, marketing research, marketing techniques, marketing simenar, marketing strategy, mass media, mind map, Master's degree, Master Card, meat and cheese, mathematic formula, mature students, media studies, media center, media room, medical science, medical center, medical history, book list, membership consultant, membership of club, mental ability, mental education, microwave oven, mid-autumn festival, midmornning snacks, mid-range, mid-semester, migration pattern, mileage tikcet, miles, military museum, mill thr grain on the ground, millions of, mountains, mineral water, minimum qualification, mining industry, mobile phone, Modern Languages, modern management hotel, modern sports facilities, money diary, money lender, money management, money order, monopoly of education , mosquito net, mother-in-law, movie poster, movement of muscle, music equipment, music instrument, notice board, name badge, native animals, negative effect, natural medicine, natural museum, natural fiber, new techonologies, nights, night shift, no allergy, no charge, no nuts, non-medicine items, non-stop flight, not check idenditities, not for circulation, number of exposure, number of occupants, nursing care, Nursing Diploma, occupational factors, nursery, nursery school, obligatery course, self-sufficient, off campus, office assistant, overfill, oil explosion, olive oil, OHPEN
 
 #### test paper 8
-on campus, on foot, on sale, on small scale, one way ticket, one way, online shopping, open admission, open shelves, open book exam, optic examnation, optional course, optional expense, oral defence, orange juice, ordinary farmers, organic farming, organic fiber, organic food, organic material, or- studies, original reason, out circulation, out of temper, out of loan, outside activity, overall aim of the health club, overall trend, overdue and pay a fine, overhead projector, overhead view, overseas student, hitch hike, packages, package tour, packing list, Pacific Ocean, p pool, pages, pal group relationship, palaces, palm tree, paper jam, parents meeting end, parental teaching, parttime job, part-time, party wears, passport photo, pay for loss, payment method, per day, per month, per person, per week, per year, permit required, personal alarm, personal statement, personal trainer, PHD, solosiphers, phone bill, photocopies of notes, photocopies of articles, photocopy of article, photocopy office, physical activity, physical education, surrandings, therapy, pie chart, pine tree, pink slip, placement test, planet science, society, planning meeting, planting garden, plastic bags, plastic collection, plus, pocket money, point of view, polish cars, pole erea, pop test, population explosion, growth, -, positive effect, possible -, postal survey, power company, practical material, skills, procations, precious stone, presentation skills, president-, previous data, previous insurence -, result, studies, price list, principle, printed card, catalog, private bathroom, private property, private school, private trip, prize giving, professional learning, project work, project background, project outline, profits, psycological patients, psycological course, public transport, public winners, public examination, public facilities, public health, public interest, public school, public service, public skills, quality of teaching, quality of education, quality of personal, quary tiles, property insurance, question handling, queen suite, queen sized bed, queen's park, RA, railway rail, railway station, railway tracks, railway worker, random selection
+on campus, on foot, on sale, on small scale, one-way ticket, one-way, online shopping, open admission, open shelves, open-book exam, optic examination, optional course, optional expenses, oral defence, orange juice, ordinary farmers, organic farming, organic fiber, organic food, organic material, Oriental studies, original reason, out circulation, out of temper, out of loan, outside activity, overall aim of the health club, overall trend, overdue and pay a fine, overhead projector, overhead view, overseas student, hitchhike, packages, package tour, packing list, Pacific Ocean, padding pool, pages, pal group relationship, palaces, palm tree, paper jam, parents' meeting's aim, parental teaching, part-time job, part-time, party wears, passport photos, pay for loss, payment method, per day, per month, per person, per week, per year, permit required, personal alarm, personal statement, personal trainer, PHD, philosophers, phone bill, photocopies of notes, photocopies of articles, photocopy of article, photocopy office, physical activities, physical education, physical surrandings, physical therapy, pie chart, pine tree, pink slip, placement test, planet science, Planet Society, planning meeting, planting garden, plastic bags, plastic collection, plus, pocket money, point of view, polish cars, poor area, pop test, population explosion, population growth, population of crocodiles, positive effect, possible causes of stress, postal survey, power company, practical material, practical skills, precautions, precious stone, presentation skills, President's suite, previous data, previous insurence company, previous result, previous studies, price list, principal, printed card, printed catalog, private bathroom, private property, private school, private trip, prize giving, professional learning, project work, project background, project outline, profits, psycological patients, psycological course, public transport, public awareness, public examination, public facilities, public health, public interest, public school, public service, public skills, quality of teaching, quality of education, quality of personnel, quarry tiles, property insurance, question handling, Queen's suite, queen-sized bed, Queen's Park, RA, railway rail, railway station, railway tracks, railway worker, random selection
 
 #### test paper 9
-range of english level, rapid population growth, raw materials, rare lines, rare species, rare fish, reach one's destination, readers, reading habits, reading hits, reading list, reading session, recall library books, recall system, receive prizes, reception area, reception certer, reception desk, recreation therapy, recruit method, recycling material, red flag, red kag-, red meat, reference books, reference skills, reference stacks, refresher course, registered mail, regular meeting, regulation, reinforced by wood and steel, relate to, remain steady, replacement of jobs, replacement policy, required course, research approach, research assistant, research findings, research methods, research opportunities, results, source, resident student, residential college, resistance from parents, resource management, resource protection, resource sharing, resouces room, respect local environment, result form , result in, review of literature, review pro-, rice c-, riverside restaurant, road-, robots, rock salt, roman story, Rose Garden, roll house, round trip ticket, round trip, route map, road map, royal commission, robot blanket, robot tree, rules and regulations, run risks, running facilities, running tunnel, rural area, role of staff, rush hour, safety check, safety helmet, sales team, safety office, regulation, silent island, sand glass clock, satellite TV station, schools of arts and sciences, school uniform, science fiction, science museum, scientific approach, scientific research, scores, sea otter, sea urchen, sea watch, sea food restaurant, seat belt, seating capacity, second floor, second hand text books, secondary school, second-year student, -, selection method, self-access lab, self-defence, self-service restaurant, senior advisor, senior manager, senior staff, sense of achivement, sense of success, sensible exercise, sentences, service manager, set money aside, shared bathroom, shared social area, sheer the sheep, sheep and cattle, sheep sheering, shift work, shop assistant, shop manager, shopping center, shopping list, shopping mall, shortage of money, sick note, side effects, safari zoo, safari park, similar experiments, single item, size of population, size of sample, silver cloth
+range of English level, rapid population growth, raw materials, rare lions, rare species, rare fish, reach one's destination, readers, reading habits, reading hits, reading list, reading session, recall library books, recall system, receive prizes, reception area, reception certer, reception desk, recreation therapy, recruiting method, recycling material, Red Flag, red kangaroo, red meat, reference books, reference skills, reference stacks, refresher course, registered mail, regular meeting, regulations, reinforced by wood and steel, relate to, remain steady, replacement of jobs, replacement policy, required course, research approach, research assistant, research findings, research methods, research opportunities, research results, research source, resident student, residential college, resistance from parents, resource management, resource protection, resource sharing, resouces room, respect the local environment, result form , result in, review of literature, review promptly, rice cultivation, Riverside Restaurant, Road Lane, robots, rock salt, romance story, Rose Garden, row house, round trip ticket, round trip, route map, road map, royal commission, rubber blanket, rubber tree, rules and regulations, run risks, running facilities, running tunnel, rural area, role of staff, rush hour, safety check, safety helmet, sales team, safety office, safety regulations, Silent Island, sandglass clock, satellite TV station, School of Arts and Sciences, school uniform, science fiction, science museum, scientific approach, scientific research, scores, sea otter, sea urchin, sea watch, seafood restaurant, seat belt, seating capacity, second floor, second-hand textbooks, secondary school, second-year student, sedentary lifesytle, selection method, self-access lab, self-defence, self-service restaurant, senior advisor, senior manager, senior staff, sense of achievement, sense of success, sensible exercise, sentences, service manager, set money aside, shared bathroom, shared social area, shear the sheep, sheep and cattle, sheep shearing, shift work, shop assistant, shop manager, shopping center, shopping list, shopping mall, shortage of money, sick note, side effects, safari zoo, safari park, similar experiments, single item, size of population, size of sample, silver cloth
 
 #### test paper 10
-skydom, sleeping pills, sleeping sickness, slide presentation, small scale, small scar on his chin, smoke alarms, social activity, social isolation, socail issues, social matter effects, social matters, social problems, social status, social workers, soft drink, soft toys, sound effect, solar system, solar power, soar throat, spare time, spare parts, spare socks, space shuttle, special audio equipment, special chemicals, special mail, special offers, special party hats, special rule, specialist engine design, specialized course, specialised mesuem, specialised sports facilities, species in rare animal area, species of crocodiles, spending -, spiders, spiral notebook, sports article, sport suit, sport center,sports hall, sports shoes, spinose-, stack system, stacks, standard of education, standard suite, stars, starter project, starting point, states, stake set, steam engine ship, steel and wood, st-, steer water, stock market, stomach and heart, stomach muscles training, stones,storage space, store house and temples, stories, story conference, stress levels, stress management, stressful, streching, streching movement, strict control, strong scent, strong wind, student account, student banking, student debt, student hostel, student information desk, student representative, student service, student support service, student union, studio apartment, study-, study circle, study club, study techniques, styles, stuffed nose, stuffed toys, stuffed per, -, subject access, submit the document, sufficient detials, supportive-, -, sun's position, suntan -, sunscream, summary report, survey conducted, survey of reading ,survival course, swimming costume, in water fall, pool, suit, TA, tablets, take notes, take blood pressure, take one's temperature, take regular exercise, take risks, tank fee stand, techniqual vocabulary, techniqual institution, teaching club, teaching hours, teaching method, teaching staff, teaching - teachers and faculty, tape recorder, telephone survey, television drama, temple wall, temples, tennis club, terrist house, t heat, tersury education, text structure, textbook allowance, the marketing department, the disabled, the old, the poor, the milky way
+sky dome, sleeping pills, sleeping sickness, slide presentation, small scale, small scar on his chin, smoke alarms, social activities, social isolation, socail issues, social matter effects, social matters, social problems, social status, social workers, soft drinks, soft toys, sound effect, solar system, solar power, sore throat, spare time, spare parts, spare socks, space shuttle, special audio equipment, special chemicals, special mail, special offers, special party hats, special rule, specialist engine design, specialized course, specialized mesuem, specialized sports facilities, species in rare animal area, species of crocodiles, spending plans, spiders, spiral notebook, sports article, sport suit, sport center, sports hall, sports shoes, spinose plants, stack system, stacks, standard of education, standard suite, stars, starter project, starting point, states, steak set, steam engine ship, steel and wood, stiff neck, still water, stock market, stomach and heart, stomach muscles training, stones, storage space, storehouse and temples, stories, story conference, stress levels, stress management, stressful, stretching, stretching movements, strict control, strong scent, strong wind, student account, student banking, student debt, student hostel, student information desk, student representative, student service, student support service, student union, studio apartment, study aids, study circle, study club, study techniques, styles, stuffed nose, stuffed toys, stuff of purse, subject access guide, subject access, submit the document, sufficient detials, supportive atmosphere, support service, sun's position, suntan block, sun scream, summary report, survey conducted, survey of reading ,survival course, swimming costume, swimming in waterfall, swimming pool, swimming suit, TA, tablets, take notes, take blood pressure, take one's temperature, take regular exercise, take risks, taxi stand, technical vocabulary, technical institution, teaching club, teaching hours, teaching method, teaching staff, teaching syllabus, teachers and faculty, tape recorder, telephone survey, television drama, temple wall, temples, tennis club, terraced house, terrestrial heat, teritary education, text structure, textbook allowance, the marketing department, the disabled, the old, the poor, the Milky Way
 
 #### test paper 11
-theme garden, theme of project, theme park, theoretical background, theoretical framework, tiger shark, theory chapters, theory of applicaiton, therapy method, tilled land, third floor, third year student, thinking pattern, way of thinking, time table, time measurement, time priority, time management, title of essay, to some degree, to some extent, toliet facilities, too much work, tomatoes, towns, top shelf, top ten, touching rocks, tour guide, tourism organization, tourist -, town hall, toy factory, traffic flow, traffic jam, traffic lights, traffic rules, traffic safety, transportation card, travel agency, travel package, traveller's cheque, treatment method, Trinity College, - disease, tuition fee, tutorial system, twin room, TV series, TV chat show, under pressure, under go processing, under ground car park, under ground railway, unhealhy diet, union bank, unite of measurement, university divers, university facilities, university guide, university of -, university resource, unsocial hours, upward trend, urban area, vaccume cleaner, vaccume the stairs, vary according to the type, shape, vary one's diet, vegetable burger, video project, video recording, video signal, video tape editor, visual aids, VIP class, vi- learning, VISA, violent crimes, volcanic dusts, warm bus, volumn chart, voting system, waiting list, walking boots, walking club, wait training , washable shoes, wasshing machine, wedding photoes, waste handling waste disposal, X ray, weaving blanket, water fee, water heater, water park, water resources, water skiing, weekly return, welcome package, welcome party, wellfare departmetn, western europe, wheel chair, white meat, whole sale, wide reading, wide writing, widen one's horizon, widen one's view, wind power, wind tunnels, window dressing, wind design, withdral cash, women author, wood should be cut and seasoned, work objective, work place, work systematicly, world expose, wretched boat, wild animal, youth hostel, your own embassy, yellow fever
+theme garden, theme of project, theme park, theoretical background, theoretical framework, tiger shark, theory chapters, theory of applicaiton, therapy method, tilled land, third floor, third-year student, thinking pattern, way of thinking, timetable, time measurement, time priority, time management, title of essay, to some degree, to some extent, toliet facilities, too much work, tomatoes, tones, top shelf, top ten, touching rocks, tour guide, tourism organization, tourist brochures, Town Hall, toy factory, traffic flow, traffic jam, traffic lights, traffic rules, traffic safety, transportation card, travel agency, travel package, traveller's cheque, treatment method, Trinity College, tropical diseases, tuition fee, tutorial system, twin room, TV series, TV chat show, under pressure, undergo processing, underground car park, under ground railway, unhealhy diet, Union Bank, units of measurement, University Drive, university facilities, university guide, University of Wollongong, university resource, unsocial hours, upward trend, urban area, vacuum cleaner, vaccume the stairs, vary according to the type, shape, vary one's diet, vegetable burger, video project, video recording, video signal, videotape editor, visual aids, VIP class, virtual learning, VISA, violent crimes, volcanic dust, warm bath, volume chart, voting system, waiting list, walking boots, walking club, weight training , washable shoes, washing machine, wedding photos, waste handling, waste disposal, X-ray, weaving blanket, water fee, water heater, water park, water resources, water skiing, weekly return, welcome package, welcome party, welfare department, Western Europe, wheelchair, white meat, wholesale, wide reading, wide writing, widen one's horizon, widen one's view, wind power, wind tunnels, window dressing, wind design, withdraw cash, women author, wood should be cut and seasoned, work objective, work place, work systematically, World Expo, wretched boat, wild animals, youth hostel, your own embassy, yellow fever
 
 #### test paper 12
-abrivation, access, accessible, accident, affair, announcement, a-, accomondation, recommendation, a-, according, breading, surrounding, cooking, accounts, accountancy, accounting, addition, additional, address, dress, dressing, assessment, admission, commission, depression, affect, effect, effective, effectively, appeal, annual, arrival, applicants, application, applied, applience, approach, appointment, approvle, approximate, assistance, assistant, assosiate, assosiation, attachment, attack, attempt, attitude, attend, attendence, attention, attentive, business, balloon, cartoon, spoon, billion, ball room, bathroom, playroom, roommates, barren, barrier, better, baphe, beginner, beginning, planner, planning, blood, bloom, boots, book, booking, bookcloth, canible, connect, cassette, cattle, classical, classification, classmates, comment, commercial, communication, community, common, cotton, coffee, cottage, craming, raining, wedding, band, current, currency, cooperate, cross roads, des-, des-, different, difference, dinner, d-, little, pizza, discuss, discussion, speech, suggestion, door, dollar, floor, poor, efficient, essensial, excurate, essay, embassy, issue, coreculem, express, congress, pressed, pressure, fee, feedback, ferry, fossil, food, foot, football, footprints, goods, gallen, grammer, handbook, textbook, notebook, news letters, hippop, hoover, horror, hall, immune, irrigation, irritation, useless, impossible, incorrect, in-, interviewee, lesson, degree, likely heard, fire wood, matter, mammal, math, massage, midday, million, -, lookout, occasion, occupant, occupation, occupational, offer, office, officer, passage, passport, password, pattern, paddle, panny, personnel, pottery, process, procession, profession, professor, quesionnar, possibility, opportunities, robber, otter, rubbish, russian, school, -, -, screen, sea food, settle ments, shuttle, shopping, swimming, skiing, setting, steel, steering, stress, stressful, stiff, staff, stuff, cliff, success, sucessful, session, -, summary, summer, summit, suplimentary, supply, support, supportive, tennis, tunnel, tooth ache, traffic, terrist, -, vaccine, vaccume, waitress, willow, weed, wood, woods, zoo
+abbreviation, access, accessible, accident, affair, announcement, assume, accommodation, recommendation, annex, according, breeding, surrounding, cooking, account, accountancy, accounting, addition, additional, address, dress, dressing, assessment, admission, commission, depression, affect, effect, effective, effectively, appeal, annual, arrival, applicants, application, applied, appliance, approach, appointment, approval, approximate, assistance, assistant, assosiate, assosiation, attachment, attack, attempt, attitude, attend, attendance, attention, attentive, business, balloon, cartoon, spoon, billion, ballroom, bathroom, playroom, roommates, barren, barrier, better, beffet, beginner, beginning, planner, planning, blood, bloom, boot, book, booking, bookset, cannibal, connect, cassette, cattle, classical, classification, classmate, comment, commercial, communication, community, common, cotton, coffee, cottage, cramming, running, wedding, banned, current, currency, cooperate, crossroads, dessert, dissertation, different, difference, dinner, dizzy, little, pizza, discuss, discussion, speech, suggestion, door, dollar, floor, poor, efficient, essential, exaggerate, essay, embassy, issue, cirreculum, express, congress, pressed, pressure, fee, feedback, ferry, fossil, food, foot, football, footprint, goods, gallen, grammer, handbook, textbook, notebook, newsletters, hippo, hoover, horror, hall, immune, irrigation, irritation, useless, impossible, incorrect, innovation, interviewee, lessen, degree, likelihood, firewood, matter, mammal, mass, massage, midday, million, narrator, lookout, occasion, occupant, occupation, occupational, offer, office, officer, passage, passport, password, pattern, paddle, penny, personnel, pottery, process, processing, profession, professor, quesionnaire, possibility, opportunities, robber, otter, rubbish, Russia, school, kangaroo, Scottish, screen, seafood, settlement, shuttle, shopping, swimming, skiing, setting, steel, steering, stress, stressful, stiff, staff, stuff, cliff, success, successful, session, concession, summary, summer, summit, supplementary, supply, support, supportive, tennis, tunnel, toothache, traffic, terraced, terrestrial, vaccine, vacuum, waitress, willow, weed, wood, woods, zoo
