--- a/IELTS/语料库听写/标准答案.md
+++ b/IELTS/语料库听写/标准答案.md
@@ -1,9 +1,9 @@
 ## chapter 3
 #### test paper 1
-ability abstract accountant accuracy acid action activity actor adult adventure advertisements advertising advice age agency agreement agriculture adi aim air allergy alley allowance alteration altitude ambition ambulance amount analysis analyst anger animal ankle answer Antarctica ape appearance architect architectures area argument aristocrat army art article aspirin assignment atlas audience auditorium author authroity average award bachelor background bacteria badge badminton backpack baldness band bandage bands bank banquet base basement bases basis bath batteries battery beach beard beats beauty bed bedroom bed sheet betset behaviours belt benefit beverage bibliography bicycle bill biologist bird birth blanket blast block blouse board boarder boat bone bowl bowling branch breakfast brick bridge brochures building bungalow burger bus cat
+ability abstract accountant accuracy acid action activity actor adult adventure advertisements advertising advice age agency agreement agriculture aid aim air allergy alley allowance alteration altitude ambition ambulance amount analysis analyst anger animal ankle answer Antarctica ape appearance architect architectures area argument aristocrat army art article aspirin assignment atlas audience auditorium author authority average award bachelor background bacteria badge badminton backpack baldness band bandage bands bank banquet base basement bases basis bath batteries battery beach beard beats beauty bed bedroom bed sheet betsit behaviors belt benefit beverage bibliography bicycle bill biologist bird birth blanket blast block blouse board boarder boat bone bowl bowling branch breakfast brick bridge brochures building bungalow burger burgelar bus cab
 
 #### test paper 2
-cabinet cable cafe cafeteria cage Cambridge camel camera camp campus candidate candle canteen captial capsule carbon care career carpet carving cashier castle category cathedral cause cave cents centry certificate chair chance chancellor channel chapter character charge charity chart chat checklist checks cheese chemist's chest chick chicken child chin chocolate choice church cinema circle city clarity cleaner cleaning client cliffs climate clinic clock cloth clothing club coach coast code coke cola colleague college comedy commercials commuter companion company complaint complex computer concert conclusion condition conferences confidence donfirmation congestion conqueror conquest conversation conservation construciton consultant consumption contact container contaminants contamination content continent contract contracts controversy convenience cooperations cop copy corporation corpse correspondence cost costume cot cottage cough council country course crack craft cream credit creek crime crisis crocodile crop cultivation culture cup cupboard curtain customer cutlery cycle cycling damage danger data date day deadline debate
+cabinet cable cafe cafeteria cage Cambridge camel camera camp campus candidate candle canteen capital capsule carbon care career carpet carving cashier castle category cathedral cause cave cents century certificate chair chance chancellor channel chapter character charge charity chart chat checklist checks cheese chemist's chest chick chicken child chin chocolate choice church cinema circle city clarity cleaner cleaning client cliffs climate clinic clock cloth clothing club coach coast code coke cola colleague college comedy commercials commuter companion company complaint complex computer concert conclusion condition conferences confidence confirmation congestion conqueror conquest conversation conservation construction consultant consumption contact container contaminants contamination content continent contract contracts controversy convenience cooperations cop copy corporation corpse correspondence cost costume cot cottage cough council country course crack craft cream credit creek crime crisis crocodile crop cultivation culture cup cupboard curtain customer cutlery cycle cycling damage danger data date day deadline debate
 
 #### test paper 3
 debt decade decision decline decorations delay delegate delight delivery demonstration dentist department deposit depth description desert design designer desire desk destination detail diary diction diet dining dinner dioxide direction director disagreement disaster discipline disco discomfor disocs discount discovery disease dish disposal dispute distance divorce document documentary donation donkey draft drama draw drawer drink drinking driver diving drug drum due duration dust duty eagle ear east eating economy editor education elbow elder electricity elements elevator emotion emperor employee employer encyclopedia ending energies engine engineer entrace epidemic equipment ethic evening event evidence examination example exception exchange excitement excursion excuse exercises exhibition existence existing expansion expense experiment expert explanation explosion exposition exposure extension facility factor factory
