--- a/IELTS/语料库听写/听写记录3.md
+++ b/IELTS/语料库听写/听写记录3.md
@@ -1,6 +1,6 @@
 ## chapter 3
 #### test paper 1
-ability abstract accountant accuracy acid action activity actor adult adventure advertisement advertising advise age agency agreement agriculture aid aim air allergy alley allowance - altitude ambition ambiluence announce - analyse anger animal ankle answer Antarctica ape appearance architect architectures area argument - army art artiacle aspirin asignment atlas audio auditorium auther authority average award - background bacteria badge badminton backpack baldness band bandage bands bank banquet base basement basis bases bath baterris baterry beach - beaf beauty bed bedroom bed sheet bedsit behavious belt benifit beverage bibliography bicycle bill biologist bird birth blanket blast block blouse board boarder boat bone bowl bowling branch breakfast brick bridge brochures building bangalow burger burgelar bus cab
+ability abstract accountant accuracy acid action activity actor adult adventure advertisement advertising advise age agency agreement agriculture aid aim air allergy alley allowance - altitude ambition ambiluence announce - analyse anger animal ankle answer Antarctica ape appearance architect architectures area argument - army art artiacle aspirin asignment atlas audio auditorium auther authority average award - background bacteria badge badminton backpack baldness band bandage bands bank banquet base basement basis bases bath baterris baterry beach - beaf beauty bed bedroom bed sheet bedsit behaviors belt benifit beverage bibliography bicycle bill biologist bird birth blanket blast block blouse board boarder boat bone bowl bowling branch breakfast brick bridge brochures building bangalow burger burgelar bus cab
 
 #### test paper 2
 cabinet cable cafe cafeteria cage Cambridge camel camera camp campus candidate candle canteen capital capitual carbon care career carput carving - ca- catagory cathedral cause cave cent centory certificate chair chance chanceller channel chapter charactor charge charity charm chat checklist check cheese chemist chest chick chicken child chin chocolate choice church cinema circle city clarity cleaner cleaning clients cliff climate clinic clock cloth clothing club coach cough cold coko cola colleague college comedy commercial commuter compain company complaint complex computer concert conclusion condition conferences confident confirmation congestion conqueror conquest convirsation conservation construction consultant consumption contact container contaminant contamination content continent contract contract controversy convenient co-operation cop copy corperation corpse corresponsdence cost costume cot cottage cough council country course crack craft cream credit creek crime crisis crocodile crop cultivation culture cup cupbard curtin customer cutlery cycle cycling damage danger data date day deadline debate 
